--- a/jenkinsCiCD/gradle/workflows/build.yml
+++ b/jenkinsCiCD/gradle/workflows/build.yml
@@ -2,30 +2,63 @@ name: Gradle Build and Test
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout your GitHub repository
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Set up Java (you can use 17 or 21)
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # Step 3: Give Gradle wrapper permission
-      - name: Make gradlew executable
+      - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      # Step 4: Build and test using Gradle
-      - name: Build and Test
-        run: ./gradlew clean test
+      - name: Build with Gradle
+        run: ./gradlew build
+
+
+
+
+
+
+# name: Gradle Build and Test
+
+# on:
+#   push:
+#     branches: [ "master" ]
+#   pull_request:
+#     branches: [ "master" ]
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       # Step 1: Checkout your GitHub repository
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+
+#       # Step 2: Set up Java (you can use 17 or 21)
+#       - name: Set up JDK 17
+#         uses: actions/setup-java@v4
+#         with:
+#           java-version: '17'
+#           distribution: 'temurin'
+
+#       # Step 3: Give Gradle wrapper permission
+#       - name: Make gradlew executable
+#         run: chmod +x gradlew
+
+#       # Step 4: Build and test using Gradle
+#       - name: Build and Test
+#         run: ./gradlew clean test
