--- a/jenkinsCiCD/gradle/workflows/build.yml
+++ b/jenkinsCiCD/gradle/workflows/build.yml
@@ -11,27 +11,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
-      - name: Grant execute permission for Gradle
-        run: chmod +x gradlew
+    - name: Grant execute permission for Gradle
+      run: chmod +x gradlew
 
-      - name: Build with Gradle
-        run: ./gradlew clean build --stacktrace
+    - name: Build with Gradle
+      run: ./gradlew clean build --stacktrace
 
-      - name: Run automated tests
-        run: ./gradlew test --stacktrace
+    - name: Run Tests with Gradle
+      run: ./gradlew test --stacktrace
 
-      - name: Upload Test Report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-report
-          path: build/reports/tests/test
+    - name: Run additional tests
+      run: ./gradlew test --stacktrace
+
+    - name: Upload Test Report
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: test-report
+        path: build/reports/tests/test
