--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,50 +1,54 @@
+# Name of the workflow
 name: Gradle UI Automation Tests
 
+# Define events that trigger the workflow
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" ]          # Trigger workflow when code is pushed to the main branch
   pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
+    branches: [ "main" ]          # Trigger workflow when a pull request targets the main branch
+  workflow_dispatch:               # Allow manual triggering from GitHub Actions UI
   schedule:
-    - cron: '0 2 * * *'
+    - cron: '0 2 * * *'           # Scheduled run daily at 2:00 AM UTC
 
+# Define jobs for the workflow
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest         # Use the latest Ubuntu runner
 
+    # Define the sequence of steps
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4   # Step to clone your repository into the runner
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v4 # Step to install Java Development Kit (JDK)
         with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: gradle
+          distribution: 'temurin'   # JDK distribution to install
+          java-version: '17'        # JDK version
+          cache: gradle             # Enable caching for Gradle dependencies
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v4 # Step to install Node.js for Playwright
         with:
-          node-version: '20'
+          node-version: '20'        # Node.js version to install
 
       - name: Install Playwright Browsers
-        run: |
-          npm install
-          npx playwright install --with-deps
+        run: |                      # Run multiple commands in the runner shell
+          npm install               # Install project dependencies from package.json
+          npx playwright install --with-deps  # Install required browsers for Playwright
 
       - name: Grant execute permission to Gradle
-        run: chmod +x gradlew
+        run: chmod +x gradlew       # Make the Gradle wrapper executable
 
       - name: Run automation tests
-        run: ./gradlew clean test
+        run: ./gradlew clean test   # Execute Gradle task to run all automation tests
 
       - name: Upload test reports
-        if: always()
+        if: always()               # Ensure this step runs even if previous steps fail
         uses: actions/upload-artifact@v4
         with:
-          name: test-report
-          path: |
-            build/reports/tests
-            build/test-results
+          name: test-report        # Name of the artifact in GitHub Actions
+          path: |                  # Paths to upload as artifacts
+            build/reports/tests    # Gradle HTML test reports
+            build/test-results     # Gradle XML/other test result files
