--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,54 +1,120 @@
-# Name of the workflow
-name: Gradle UI Automation Tests
+name: UI Automation with App Repo
 
-# Define events that trigger the workflow
 on:
+  workflow_dispatch:
   push:
-    branches: [ "main" ]          # Trigger workflow when code is pushed to the main branch
-  pull_request:
-    branches: [ "main" ]          # Trigger workflow when a pull request targets the main branch
-  workflow_dispatch:               # Allow manual triggering from GitHub Actions UI
-  schedule:
-    - cron: '0 2 * * *'           # Scheduled run daily at 2:00 AM UTC
+    branches: [ "main" ]
 
-# Define jobs for the workflow
 jobs:
-  test:
-    runs-on: ubuntu-latest         # Use the latest Ubuntu runner
+  ui-tests:
+    runs-on: ubuntu-latest
 
-    # Define the sequence of steps
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4   # Step to clone your repository into the runner
+      # Checkout automation tests
+      - name: Checkout automation repo
+        uses: actions/checkout@v4
 
+      # Checkout application repo
+      - name: Checkout application repo
+        uses: actions/checkout@v4
+        with:
+          repository: Masoma-Begum/my-app   # 🔴 CHANGE THIS this is application code repository
+          token: ${{ secrets.APP_REPO_TOKEN }}
+          path: app
+
+      # Setup Java
       - name: Set up JDK 17
-        uses: actions/setup-java@v4 # Step to install Java Development Kit (JDK)
+        uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'   # JDK distribution to install
-          java-version: '17'        # JDK version
-          cache: gradle             # Enable caching for Gradle dependencies
+          distribution: temurin
+          java-version: 17
+          cache: gradle
 
+      # Setup Node (Playwright)
       - name: Set up Node.js
-        uses: actions/setup-node@v4 # Step to install Node.js for Playwright
+        uses: actions/setup-node@v4
         with:
-          node-version: '20'        # Node.js version to install
+          node-version: 20
 
-      - name: Install Playwright Browsers
-        run: |                      # Run multiple commands in the runner shell
-          npm install               # Install project dependencies from package.json
-          npx playwright install --with-deps  # Install required browsers for Playwright
+      # Install Playwright browsers
+      - name: Install Playwright
+        run: |
+          npm install
+          npx playwright install --with-deps
 
-      - name: Grant execute permission to Gradle
-        run: chmod +x gradlew       # Make the Gradle wrapper executable
+      # Start application
+      - name: Start application
+        run: |
+          cd app
+          ./gradlew bootRun &
+          sleep 30
 
-      - name: Run automation tests
-        run: ./gradlew clean test   # Execute Gradle task to run all automation tests
+      # Run automation tests
+      - name: Run UI tests
+        run: ./gradlew clean test
 
+      # Upload reports
       - name: Upload test reports
-        if: always()               # Ensure this step runs even if previous steps fail
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: test-report        # Name of the artifact in GitHub Actions
-          path: |                  # Paths to upload as artifacts
-            build/reports/tests    # Gradle HTML test reports
-            build/test-results     # Gradle XML/other test result files
+          name: ui-test-report
+          path: |
+            build/reports/tests
+            build/test-results
+
+# -----------This working fine with out APPlication code repo__________________________________
+# # Name of the workflow
+# name: Gradle UI Automation Tests
+
+# # Define events that trigger the workflow
+# on:
+#   push:
+#     branches: [ "main" ]          # Trigger workflow when code is pushed to the main branch
+#   pull_request:
+#     branches: [ "main" ]          # Trigger workflow when a pull request targets the main branch
+#   workflow_dispatch:               # Allow manual triggering from GitHub Actions UI
+#   schedule:
+#     - cron: '0 2 * * *'           # Scheduled run daily at 2:00 AM UTC
+
+# # Define jobs for the workflow
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest         # Use the latest Ubuntu runner
+
+#     # Define the sequence of steps
+#     steps:
+#       - name: Checkout source code
+#         uses: actions/checkout@v4   # Step to clone your repository into the runner
+
+#       - name: Set up JDK 17
+#         uses: actions/setup-java@v4 # Step to install Java Development Kit (JDK)
+#         with:
+#           distribution: 'temurin'   # JDK distribution to install
+#           java-version: '17'        # JDK version
+#           cache: gradle             # Enable caching for Gradle dependencies
+
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v4 # Step to install Node.js for Playwright
+#         with:
+#           node-version: '20'        # Node.js version to install
+
+#       - name: Install Playwright Browsers
+#         run: |                      # Run multiple commands in the runner shell
+#           npm install               # Install project dependencies from package.json
+#           npx playwright install --with-deps  # Install required browsers for Playwright
+
+#       - name: Grant execute permission to Gradle
+#         run: chmod +x gradlew       # Make the Gradle wrapper executable
+
+#       - name: Run automation tests
+#         run: ./gradlew clean test   # Execute Gradle task to run all automation tests
+
+#       - name: Upload test reports
+#         if: always()               # Ensure this step runs even if previous steps fail
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: test-report        # Name of the artifact in GitHub Actions
+#           path: |                  # Paths to upload as artifacts
+#             build/reports/tests    # Gradle HTML test reports
+#             build/test-results     # Gradle XML/other test result files
