--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Masoma-Begum/my-app   # 🔴 CHANGE THIS this is application code repository
-          token: ${{ secrets.APP_REPO_TOKEN }}
+          token: ${{ secrets.APP_REPO_TOKEN }}  # 🔴 CHANGE THIS this is application code in is private repository
           path: app
 
       # Setup Java
